feat: implement endpoint for refresh spotify tokens
